feat: migrate to kotlin